macro-template/tests/ui/err/range_radix_mismatch.stderr
error: range bounds must use the same integer radix
 --> tests/ui/err/range_radix_mismatch.rs:5:24
  |
5 |         for N in 0x0..=3 {
  |                        ^
